2005-10-26  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update

	* testsuite/run-test.sh (testbuild): --resolve-deps removed.
	debootstrap 0.3.2 runs --resolve-deps per default.

2005-10-20  Junichi Uekawa  <dancer@debian.org>

	* pdebuild: apply patch from Jonas Smedegaard (#312121)
	and change -P to -[bB]

2005-10-19  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh (testbuild): Change to use resolve-deps in testsuite for 
	debootstrap.

2005-10-18  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: updated TODO file; with hopefully a better tracking of debian bugs.

2005-10-14  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update documentation to include 
	IRC channel specification

2005-10-09  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update documentation on development
	policy.

2005-10-08  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: reviewed and updated documentation.
	Added development, and bugreporting section, which should be 
	filled up later, if possible.

	* debian/README.Debian: update README

	* pbuilder.8: refer to --debug option from --preserve-buildplace.

2005-10-06  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh (testbuild): add debootstrapopts, --verbose.

2005-10-04  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage-funcs: Add comment on what cowprotect is there for.

2005-09-30  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: #325318, from Osamu Aoki;
	clarify about precedence in configuration options.

	* pbuilder-modules:
	* pbuilder-updatebuildenv:  apply patch to place -maxdepth before other args.

2005-09-04  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: Add notes on cowdancer.
	updates notes to note that it's hosted at alioth now.

	* Documentation/Makefile (preview): create target for preview with
	mozilla firefox.
