@@ -1,18 +1,26 @@
 TODO and possible bugs: 
 
+* use arrays for debbuildopts
+   - current --debbuildopts usages will break, how do we support it?
+
 * dpkg does not work in woody chroot under 2.6.11 or later kernels
    - depends-on debian-bug: 322309 dpkg: no action
    - depends-on debian-bug: 329468 debootstrap: fixed in 0.3.2
    - depends-on debian-bug: 332903 cdebootstrap: no action
 
-* save-afer-login seems to save aptcache and make a big base.tgz; do we want that?
+* save-afer-login seems to save aptcache and make a big base.tgz.
+   we don't want it, clean aptcache before save test it is functional.
 
 * select cdebootstrap if debootstrap does not exist and cdebootstrap exists.
 
 * revert back to using --variant=buildd for debootstrap
    - depends-on debian-bug: 314858 debootstrap: fixed in 0.3.2
 
-* Add hooks to install gnupg package and ways to allow new keys to be registered into pbuilder chroots.
+* apt authentication support
+Add hooks to install gnupg package.
+Allow new keys to be registered into pbuilder chroots.
+Document in manual.
+test
 
 * Use pbuilder cache in pdebuild-internal (2353237)
 
@@ -26,9 +34,7 @@ TODO and possible bugs:
 
 * Machine type specification in Build dependency should either have  [!xxx !xxx !xxx ...] or [xxx xxx xxx ...]   [!xxx xxx] formats are not parsed, and should really not exist.
 
-* Creating a "sbuilder" command, which cooperates with sbuild, and use sbuild if possible.
-
-* Please file a bug if you find that pbuilder does not exit with error condition on failure to  build a package.
+* sbuild interface
 
 * Remember to update the TODO file.
 
@@ -54,5 +60,3 @@ TODO and possible bugs:
 * Use alternative to pbuilder-satisfydepends; apt-pkg? read elmo.txt for clues.
 
 $Id$
-
-
