@@ -1,9 +1,10 @@
 pbuilder (0.137) UNRELEASED; urgency=low
 
   [Junichi Uekawa]
-  * New development version.
-
- -- Junichi Uekawa <dancer@debian.org>  Thu, 20 Oct 2005 23:39:32 +0900
+  * pbuilder-doc.xml: Document amd64-i386 usage in FAQ.
+  * update TODO file.
+  
+ -- Junichi Uekawa <dancer@debian.org>  Fri, 28 Oct 2005 15:39:21 +0900
 
 pbuilder (0.136) unstable; urgency=low
 
