@@ -1,3 +1,11 @@
+2005-10-28  Junichi Uekawa  <dancer@debian.org>
+
+	* debian/TODO: update.
+
+	* Documentation/pbuilder-doc.xml: Update documentation on 
+	pbuilder on amd64
+	document TODO file.
+
 2005-10-26  Junichi Uekawa  <dancer@debian.org>
 
 	* debian/TODO: update
